[tool.poetry]
name = "docker-building-image"
version = "0.1.0"
description = ""
authors = ["Marcin <marcin@thirty3.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
mysql-connector-python = "^8.0.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
